@@ -5,13 +5,13 @@
 #ifndef __C_SCENE_NODE_ANIMATOR_FLY_STRAIGHT_H_INCLUDED__
 #define __C_SCENE_NODE_ANIMATOR_FLY_STRAIGHT_H_INCLUDED__
 
-#include "ISceneNode.h"
+#include "ISceneNodeAnimatorFinishing.h"
 
 namespace irr
 {
 namespace scene
 {
-	class CSceneNodeAnimatorFlyStraight : public ISceneNodeAnimator
+	class CSceneNodeAnimatorFlyStraight : public ISceneNodeAnimatorFinishing
 	{
 	public:
 
@@ -44,7 +44,7 @@ namespace scene
 
 	private:
 
-		void recalculateImidiateValues();
+		void recalculateIntermediateValues();
 
 		core::vector3df Start;
 		core::vector3df End;
